Removed extra spacings and fixed email overflow

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -330,10 +330,6 @@ form {
 }
 
 #mckinsey_help {
-  white-space: pre-wrap;
-  white-space: -moz-pre-wrap;
-  white-space: -pre-wrap;
-  white-space: -o-pre-wrap;
   word-wrap: break-word;
   p {
     margin-bottom: rem-calc(20);
@@ -341,10 +337,7 @@ form {
   }
   #mk-help-video { margin-bottom: rem-calc(20); }
   #support-contact-email {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    display: block;
+    word-wrap: break-word;
   }
 }
 
